# NPMCommander

./: .gitignore  BUILD_APP.command  README.md  app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
renderer/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
